# ore-hq-server

./: .env.example  .gitignore  Cargo.toml  diesel.toml  rust-toolchain.toml  whitelist.txt.example
migrations/2024-08-11-151101_create_miners/: down.sql  up.sql
migrations/2024-08-11-235837_create_pools/: down.sql  up.sql
migrations/2024-08-12-000144_create_challenges/: up.sql
migrations/2024-08-12-002816_create_submissions/: up.sql
migrations/2024-08-12-003544_create_txns/: down.sql  up.sql
migrations/2024-08-12-004131_create_claims/: down.sql  up.sql
migrations/2024-08-13-014749_create_rewards/: down.sql  up.sql
migrations/2024-08-14-194732_add_digest_to_submissions/: down.sql  up.sql
migrations/2024-08-14-235001_create_earnings/: down.sql  up.sql
migrations/2024-08-15-041437_idx_challenge/: down.sql  up.sql
migrations/2024-08-15-041901_idx_miner_pubkey/: down.sql  up.sql
migrations/2024-08-15-042349_idx_submissions_nonce/: down.sql  up.sql
migrations/2024-08-15-234722_challenges_challenge_unique/: down.sql  up.sql
migrations/2024-09-18-045831_idx_submissions_miner_id/: down.sql  up.sql
migrations/2024-09-18-053220_idx_submissions_challenge_id/: down.sql  up.sql
migrations/2024-09-18-053428_idx_submissions_miner_challenge/: down.sql  up.sql
migrations/2024-09-20-162626_submissions_id_to_bigint/: down.sql  up.sql
migrations/2024-09-21-202059_earnings_add_created_at_day_generated_column/: down.sql  up.sql
migrations/2024-09-21-203337_idx_earnings_miner_id_created_at_day/: down.sql  up.sql
migrations/2024-10-06-044121_idx_rewards_miner_id/: down.sql  up.sql
migrations/2024-10-06-185750_miner_pubkey_unique/: down.sql  up.sql
migrations/2024-10-06-190014_reward_miner_id_unique/: down.sql  up.sql
migrations/2024-10-18-203518_create_stake_accounts/: down.sql  up.sql
migrations/2024-10-19-235653_stake_accounts_stake_pda_unique/: down.sql  up.sql
migrations/2024-12-03-162732_earnings_id_to_bigint/: up.sql
migrations/2025-03-01-234736_submissions_2/: down.sql  up.sql
migrations/2025-03-02-015151_drop_submissions/: up.sql
src/: app_database.rs  app_metrics.rs  app_rr_database.rs  global_boost_util.rs  main.rs  message.rs  models.rs  ore_utils.rs  proof_migration.rs  routes.rs  schema.rs  scripts.rs
src/systems/: app_metrics_system.rs  cache_update_system.rs  claim_system.rs  client_message_handler_system.rs  client_submissions_handler.rs  delegate_boost_tracking_system.rs  handle_ready_clients_system.rs  message_text_all_clients_system.rs  mod.rs  pong_tracking_system.rs  pool_mine_success_system.rs  pool_submission_system.rs  proof_tracking_system.rs
