[package]
name = "ore-hq-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bytemuck = "1.14.3"
drillx = "2.0.0"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
ore-api = "3.6.0"
ore-boost-api = "4.0.0"
ore-miner-delegation = { version = "0.10.0", features = ["no-entrypoint"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
solana-sdk = "=2.1"
solana-client = "=2.1"
solana-program = "=2.1"
solana-account-decoder = "=2.1"
solana-transaction-status = "=2.1"
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }
spl-token = { version = "^4", features = ["no-entrypoint"] }
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
bincode = "1.3.3"
crossbeam-channel = "0.5.13"
rand = "0.8.5"
clap = { version = "4.5.14", features = ["derive"] }
diesel = { version = "2.2.3", features = ["mysql", "chrono"] }
chrono = "0.4.38"
deadpool-diesel = { version = "0.6.1", features = ["mysql"] }
base64 = "0.22.1"
tracing-appender = "0.2.3"
uuid = { version = "1.10.0", features = ["v4"] }
steel = { features = ["spl"], version = "4.0" }
reqwest = "0.11"
sysinfo = "0.32.0"

